--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/_ksRootLayout.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/_ksRootLayout.cshtml
@@ -119,7 +119,7 @@
         settings.Modal = true;
         settings.AutoUpdatePosition = true;
         settings.PopupHorizontalAlign = PopupHorizontalAlign.WindowCenter;
-        settings.PopupVerticalAlign = PopupVerticalAlign.Middle;
+        settings.PopupVerticalAlign = PopupVerticalAlign.TopSides;
         settings.ClientSideEvents.CloseUp = "function(s, e){ ASPxClientEdit.ClearEditorsInContainer(null, '', true); }";
     }).GetHtml()
 </body>
