--- a/KetoSavageWeb/KetoSavageWeb/Views/ClientCharts/_clientProgramGrid.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/ClientCharts/_clientProgramGrid.cshtml
@@ -1,71 +1,91 @@
-﻿@model
+﻿@model IEnumerable<KetoSavageWeb.ViewModels.UserProgramProgress>
 
 <div id="devExtremeProgramGrid">
     @(Html.DevExtreme().DataGrid()
-                        .ID("gridClientProgram")
-                        .DataSource(Model)
-                        .RowAlternationEnabled(true)
-                        .Paging(p => p.PageSize(10))
-                        .Pager(p => p
-                            .AllowedPageSizes(new int[] { 10, 20, 30, 40 })
-                            .ShowPageSizeSelector(true)
-                        )
-                        .Columns(c =>
-                        {
-                        c.Add()
-            .DataField("Date");
-                        c.Add()
-            .Caption("Weight")
-            .Columns(a =>
-            {
-                a.Add()
-                    .Caption("Planned")
-                    .DataField("PlannedWeight");
-                a.Add()
-                    .Caption("Actual")
-                    .DataField("ActualWeight");
-            });
-                        c.Add()
-            .Caption("Fat")
-            .Columns(a =>
-            {
-                a.Add()
-                    .Caption("Planned")
-                    .DataField("PlannedFat");
-                a.Add()
-                    .Caption("Actual")
-                    .DataField("ActualFat");
-            });
-                        c.Add()
-            .Caption("Protein")
-            .Columns(a =>
-            {
-                a.Add()
+.ID("gridClientProgram")
+.DataSource(Model)
+.RowAlternationEnabled(true)
+.Paging(p => p.PageSize(10))
+.Pager(p => p
+.AllowedPageSizes(new int[] { 10, 20, 30, 40 })
+.ShowPageSizeSelector(true)
+)
+.Columns(c =>
+{
+c.Add()
+    .DataField("Date");
+c.Add()
+.Caption("Weight")
+.Columns(a =>
+{
+a.Add()
+.Caption("Planned")
+.DataField("PlannedWeight");
+a.Add()
+.Caption("Actual")
+.DataField("ActualWeight");
+a.Add()
+.Caption("Variance")
+.CalculateCellValue(@<text>
+        function(data) {
+        return [data.ActualWeight - data.PlannedWeight]
+        }
+</text>);
+});
+c.Add()
+.Caption("Fat")
+.Columns(a =>
+{
+a.Add()
+        .Caption("Planned")
+        .DataField("PlannedFat");
+a.Add()
+        .Caption("Actual")
+        .DataField("ActualFat");
+a.Add()
+        .Caption("Variance")
+        .CalculateCellValue(@<text>
+            function(data) {
+            return [data.ActualFat - data.PlannedFat]
+            }
+        </text>);
+});
+        c.Add()
+        .Caption("Protein")
+        .Columns(a =>
+        {
+            a.Add()
                     .Caption("Planned")
                     .DataField("PlannedProtein");
-                a.Add()
+            a.Add()
                     .Caption("Actual")
                     .DataField("ActualProtein");
-            });
-                        c.Add()
-            .Caption("Carbohydrates")
-            .Columns(a =>
-            {
-            a.Add()
-                    .Caption("Planned")
-                    .DataField("PlannedCarbohydrates");
-            a.Add()
-                    .Caption("Actual")
-                    .DataField("ActualCarbohydrates");
             a.Add()
                     .Caption("Variance")
                     .CalculateCellValue(@<text>
+                        function(data) {
+                        return [data.ActualProtein - data.PlannedProtein]
+                        }
+                    </text>);
+                        });
+            c.Add()
+            .Caption("Carbohydrates")
+            .Columns(a =>
+            {
+                a.Add()
+                    .Caption("Planned")
+                    .DataField("PlannedCarbohydrates");
+                a.Add()
+                    .Caption("Actual")
+                    .DataField("ActualCarbohydrates");
+                a.Add()
+                    .Caption("Variance")
+                    .CalculateCellValue(@<text>
                             function(data) {
-                                return [data.PlannedCarbohydrates, data.ActualCarbohydrates]
-                                   .join(" ");
+                                return [data.ActualCarbohydrates - data.PlannedCarbohydrates]
                             }
-                        </text>);
-                });
+                    </text>);
+            });
 
         })
 
