Added dynamic macro chart

--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/_ksRootLayout.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/_ksRootLayout.cshtml
@@ -108,7 +108,7 @@
         }).GetHtml();
     }
 
-    @Html.DevExpress().PopupControl(settings =>
+    @*@Html.DevExpress().PopupControl(settings =>
     {
         settings.Name = "mainPopupControl";
         settings.Width = Unit.Percentage(25);
@@ -122,7 +122,7 @@
         settings.PopupHorizontalAlign = PopupHorizontalAlign.WindowCenter;
         settings.PopupVerticalAlign = PopupVerticalAlign.TopSides;
         settings.ClientSideEvents.CloseUp = "function(s, e){ ASPxClientEdit.ClearEditorsInContainer(null, '', true); }";
-    }).GetHtml()
+    }).GetHtml()*@
 </body>
 
 
