--- a/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/UserProgramDetails.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/UserProgramDetails.cshtml
@@ -48,6 +48,36 @@
     function myFunction() {
         UpdateMacroGrid.batchEditApi.MoveFocusForward();
     }
+
+    function openWindow() {
+        window['macroPopup'].Show();
+    }
+
+    function updateMacroPieChart(s, e) {
+        var fat = Fat.GetText();
+        var protein = Protein.GetText();
+        var carbs = Carbohydrates.GetText();
+
+        $.ajax({
+            type: "POST",
+            url: '@Url.Action("onMacroChange", "UserPrograms")',
+            data: { fat: fat, protein: protein, carbs: carbs},
+            //beforeSend: function() {
+            //    loadingPanel.Show();
+            //},
+            success: function(response) {
+                window.console.log("success");
+                window.console.log(response);
+                $("#macro-chart").html(response);
+
+            },
+            error: function (jqXHR, textStatus, errorThrown) {
+                window.console.log(errorThrown);
+                alert("For some reason, this did not work");
+            }
+        });
+    }
+
 </script>
 
 
@@ -77,6 +107,7 @@
         });
     }).GetHtml()
 </div>
+
 <div id="weightGraph">
     @Html.DevExpress().Panel(settings =>
     {
@@ -113,41 +144,23 @@
 </div>
 
 
-            @Html.DevExpress().PopupControl(settings =>
-       {
-           settings.Name = "popupControl";
-           //settings.Width = 400;
-           settings.AllowDragging = true;
-           settings.CloseAction = CloseAction.CloseButton;
-           settings.CloseOnEscape = true;
-           settings.PopupAnimationType = DevExpress.Web.AnimationType.Fade;
-           settings.ShowHeader = false;
-           settings.Modal = true;
-           settings.AutoUpdatePosition = true;
-           settings.PopupHorizontalAlign = PopupHorizontalAlign.WindowCenter;
-           settings.PopupVerticalAlign = PopupVerticalAlign.TopSides;
-           settings.ClientSideEvents.CloseUp = "function(s, e){ ASPxClientEdit.ClearEditorsInContainer(null, '', true); }";
-       }).GetHtml()
+@Html.DevExpress().PopupControl(settings =>
+{
+    settings.Name = "macroPopup";
+    //settings.Width = 400;
+    settings.AllowDragging = true;
+    settings.CloseAction = CloseAction.CloseButton;
+    settings.CloseOnEscape = true;
+    settings.PopupAnimationType = DevExpress.Web.AnimationType.None;
+    settings.ShowHeader = false;
+    settings.Modal = true;
+    settings.AutoUpdatePosition = true;
+    settings.PopupHorizontalAlign = PopupHorizontalAlign.OutsideLeft;
+    settings.PopupVerticalAlign = PopupVerticalAlign.TopSides;
+    settings.ClientSideEvents.CloseUp = "function(s, e){ ASPxClientEdit.ClearEditorsInContainer(null, '', true); }";
+    settings.SetContent(() =>
+    {
+        Html.RenderAction("WeeklyMacroUpdateForm", "UserPrograms");
+    });
+}).GetHtml()
 
-
-    <script type="text/javascript">
-
-        //debugger;
-        function openWindow(action) {
-            $.ajax({
-                type: "POST",
-                url: "@Url.Action("EntryPopup", "UserPrograms")",
-                data: { buttonName: action },
-                traditional: true,
-                success: function (response) {
-                    popupControl.SetContentHtml(response);
-                    MVCxClientUtils.FinalizeCallback();
-                },
-                error: function (XMLHttpRequest, textStatus, errorThrown) {
-                    alert('oops, something bad happened');
-                }
-            });
-            window['popupControl'].Show();
-        }
-
-    </script>
