--- a/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/_enterNewMacroForm.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/_enterNewMacroForm.cshtml
@@ -1,68 +1,81 @@
 ﻿@model KetoSavageWeb.ViewModels.DailyMacroUpdate
 
 @{ Html.BeginForm("SetWeeklyMacros", "UserPrograms", FormMethod.Post);}
+@Html.HiddenFor(x => x.userId)
 @Html.DevExpress().FormLayout(settings =>
 {
     settings.Name = "dailyMacros";
-
+    //settings.Width = 800;
+    settings.ClientSideEvents.Init = "loadMacroPieChart";
 
     settings.SettingsItems.ShowCaption = DefaultBoolean.True;
     settings.SettingsItemCaptions.Location = LayoutItemCaptionLocation.Top;
 
     settings.SettingsItemHelpTexts.Position = HelpTextPosition.Auto;
-
-    settings.Items.Add(m => m.userId, u =>
+    settings.ColCount = 2;
+    settings.Items.AddGroupItem(ma =>
     {
-        u.ClientVisible = false;
-        u.NestedExtension().TextBox(un =>
+        ma.ShowCaption = DefaultBoolean.False;
+        ma.Width = Unit.Percentage(25);
+        ma.Items.Add(m => m.week, f =>
         {
-            un.ReadOnly = true;
-        });
-    });
-    settings.Items.Add(m => m.week, f =>
-    {
-        f.Caption = "Date:";
-        f.NestedExtension().DateEdit(d =>
-        {
-
-        });
-    });
-    settings.Items.Add(m => m.Fat, a =>
-    {
-        a.NestedExtension().TextBox(f =>
-        {
-
-        });
-    });
-    settings.Items.Add(m => m.Protein, p =>
-    {
-        p.NestedExtension().TextBox(t =>
-        {
-
-        });
-    });
-    settings.Items.Add(m => m.Carbohydrates, c =>
-    {
-        c.NestedExtension().TextBox(ac =>
-        {
-
-        });
-    });
-    settings.Items.Add(s =>
-    {
-        s.ShowCaption = DefaultBoolean.False;
-        s.SetNestedContent(() =>
-        {
-            Html.DevExpress().Button(b =>
+            f.Caption = "Date:";
+            f.NestedExtension().DateEdit(d =>
             {
 
-                b.Name = "btnMacroSubmit";
-                b.ControlStyle.CssClass = "button";
-                b.Text = "Save";
-                b.UseSubmitBehavior = true;
-            }).Render();
+            });
+        });
+        ma.Items.Add(m => m.Fat, a =>
+        {
+            a.NestedExtension().TextBox(f =>
+            {
+                f.Properties.ClientSideEvents.ValueChanged = "updateMacroPieChart";
+            });
+        });
+        ma.Items.Add(m => m.Protein, p =>
+        {
+            p.NestedExtension().TextBox(t =>
+            {
+                t.Properties.ClientSideEvents.ValueChanged = "updateMacroPieChart";
+            });
+        });
+        ma.Items.Add(m => m.Carbohydrates, c =>
+        {
+            c.NestedExtension().TextBox(ac =>
+            {
+                ac.Properties.ClientSideEvents.ValueChanged = "updateMacroPieChart";
+            });
         });
     });
 
+    settings.Items.AddGroupItem(ca =>
+    {
+        ca.ShowCaption = DefaultBoolean.False;
+        ca.Width = Unit.Percentage(75);
+        ca.Items.Add(chart =>
+        {
+            chart.Name = "MacroPieChart";
+            chart.ShowCaption = DefaultBoolean.False;
+            chart.Caption = "Macro Breakdown";
+            chart.SetNestedContent(() =>
+            {
+                Html.RenderAction("MacroPieChart", "UserPrograms");
+            });
+        });
+        ca.Items.Add(s =>
+        {
+            s.ShowCaption = DefaultBoolean.False;
+            s.SetNestedContent(() =>
+            {
+                Html.DevExpress().Button(b =>
+                {
+                    b.Name = "btnMacroSubmit";
+                    b.ControlStyle.CssClass = "button";
+                    b.Text = "Save";
+                    b.UseSubmitBehavior = true;
+                }).Render();
+            });
+        });
+    });
 }).GetHtml()
 @{ Html.EndForm();}
