--- a/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/UserProgramDetails.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/UserProgramDetails.cshtml
@@ -80,7 +80,9 @@
 
 </script>
 
-
+<div id="client-name">
+    Client: @ViewBag.ClientName
+</div>
 <div id="controlPanel">
     @Html.DevExpress().Panel(settings =>
     {
